--- a/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
+++ b/app/src/main/res/layout/fragment_zu_fang_yyxq_1.xml
@@ -117,6 +117,7 @@
                     android:layout_weight="1" />
 
                 <TextView
+                    android:id="@+id/tv_state"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="签约"
