--- a/app/src/main/res/layout/activity_zu_fang_xq.xml
+++ b/app/src/main/res/layout/activity_zu_fang_xq.xml
@@ -193,7 +193,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="户型"
+                            android:text="面积"
                             android:textColor="@color/color_666666"
                             android:textSize="@dimen/sp_12" />
 
