--- a/app/src/main/res/layout/activity_zu_fang_fa_bu.xml
+++ b/app/src/main/res/layout/activity_zu_fang_fa_bu.xml
@@ -400,7 +400,91 @@
                 <TextView
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:text="位置"
+                    android:text="区域"
+                    android:textColor="@color/color_000000"
+                    android:textSize="@dimen/sp_14" />
+
+                <TextView
+                    android:id="@+id/et_qy"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:gravity="end"
+                    android:drawableEnd="@mipmap/ic_jiantou_you"
+                    android:hint="请选择区域"
+                    android:textColor="@color/color_333333"
+                    android:textColorHint="@color/color_999999"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.8dp"
+                android:background="@color/line_gray" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="5dp"
+                    android:text="*"
+                    android:textColor="@color/red40"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="街道"
+                    android:textColor="@color/color_000000"
+                    android:textSize="@dimen/sp_14" />
+
+                <TextView
+                    android:id="@+id/et_jd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:gravity="end"
+                    android:drawableEnd="@mipmap/ic_jiantou_you"
+                    android:hint="请选择街道"
+                    android:textColor="@color/color_333333"
+                    android:textColorHint="@color/color_999999"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.8dp"
+                android:background="@color/line_gray" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingVertical="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingEnd="5dp"
+                    android:text="*"
+                    android:textColor="@color/red40"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="小区"
                     android:textColor="@color/color_000000"
                     android:textSize="@dimen/sp_14" />
 
@@ -412,7 +496,7 @@
                     android:background="@null"
                     android:gravity="end"
                     android:drawableEnd="@mipmap/ic_jiantou_you"
-                    android:hint="请选择位置"
+                    android:hint="请选择小区"
                     android:textColor="@color/color_333333"
                     android:textColorHint="@color/color_999999"
                     android:textCursorDrawable="@drawable/common_edit_input_line"
