--- a/app/src/main/res/layout/activity_pay_home_pb.xml
+++ b/app/src/main/res/layout/activity_pay_home_pb.xml
@@ -95,6 +95,7 @@
                         android:textSize="@dimen/sp_12" />
 
                     <TextView
+                        android:id="@+id/tv_freezeAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
@@ -124,6 +125,7 @@
                         android:textSize="@dimen/sp_12" />
 
                     <TextView
+                        android:id="@+id/tv_totalAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="0"
