--- a/app/src/main/res/layout/activity_mine_ht_jy.xml
+++ b/app/src/main/res/layout/activity_mine_ht_jy.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/include_toolbar" />
 
     <LinearLayout
+        android:id="@+id/ll_applyTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -24,9 +25,11 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_applyTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
+            android:drawableEnd="@mipmap/ic_right_gray"
+            android:hint="选择申请日期"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_14" />
 
@@ -43,11 +46,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="退组日期"
+            android:text="退租日期"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_contractEndTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="无"
@@ -80,9 +84,10 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_rentingAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
+            android:text="0"
             android:textColor="@color/red40"
             android:textSize="@dimen/sp_14" />
 
@@ -104,9 +109,10 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_serverAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
+            android:text="0"
             android:textColor="@color/red40"
             android:textSize="@dimen/sp_14" />
 
@@ -128,9 +134,10 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_totalAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
+            android:text="0"
             android:textColor="@color/red40"
             android:textSize="@dimen/sp_14" />
 
@@ -160,9 +167,10 @@
             android:textSize="@dimen/sp_14" />
 
         <TextView
+            android:id="@+id/tv_penalty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="无"
+            android:text="0"
             android:textColor="@color/red40"
             android:textSize="@dimen/sp_14" />
 
