--- a/app/src/main/res/layout/activity_mine_info.xml
+++ b/app/src/main/res/layout/activity_mine_info.xml
@@ -78,6 +78,7 @@
                     android:lines="1"
                     android:text=""
                     android:textColor="#333"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
                     android:textSize="12dp" />
             </RelativeLayout>
 
@@ -97,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
-                    android:text="手机号"
+                    android:text="性别"
                     android:textColor="#333"
                     android:textSize="16dp" />
 
@@ -117,7 +118,56 @@
                     android:textSize="12dp" />
             </RelativeLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/line_gray" />
 
+            <RelativeLayout
+                android:id="@+id/rl_phone"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/white">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:text="手机号"
+                    android:textColor="#333"
+                    android:textSize="16dp" />
+
+                <EditText
+                    android:id="@+id/phone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="20dp"
+                    android:background="@null"
+                    android:gravity="right|center"
+                    android:hint="请输入手机号"
+                    android:lines="1"
+                    android:text=""
+                    android:textColor="#333"
+                    android:textCursorDrawable="@drawable/common_edit_input_line"
+                    android:textSize="12dp" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/tv_bnt"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/bnt_details_height"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/circle_solid_theme_25"
+                android:gravity="center"
+                android:text="保存"
+                android:textColor="@color/white"
+                android:textSize="@dimen/bnt_details_text_size" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
