--- a/app/src/main/res/layout/activity_refresh_list.xml
+++ b/app/src/main/res/layout/activity_refresh_list.xml
@@ -9,12 +9,23 @@
 
     <include layout="@layout/include_toolbar" />
 
+    <TextView
+        android:id="@+id/tv_not_data"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableTop="@mipmap/ic_cart_not"
+        android:drawablePadding="15dp"
+        android:gravity="center"
+        android:paddingVertical="50dp"
+        android:text="暂无数据"
+        android:textColor="@color/color_999999" />
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:srlAccentColor="#00000000"
         app:srlEnablePreviewInEditMode="true"
+        android:visibility="gone"
         app:srlPrimaryColor="#00000000"
         tools:ignore="MissingClass">
 
