--- a/app/src/main/res/layout/activity_mine_ht_details.xml
+++ b/app/src/main/res/layout/activity_mine_ht_details.xml
@@ -196,6 +196,7 @@
                 android:text="0"
                 android:textColor="@color/color_333333"
                 android:textSize="14sp" />
+
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="0.8dp"
@@ -220,6 +221,7 @@
                 android:text="季付"
                 android:textColor="@color/color_333333"
                 android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/tv_lxdh"
                 android:layout_width="wrap_content"
@@ -235,46 +237,66 @@
                 android:layout_height="0.8dp"
                 android:layout_margin="15dp"
                 android:background="@color/color_eeeeee" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_marginVertical="20dp"
                 android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/bnt_jy"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
+                    android:paddingHorizontal="15dp"
                     android:layout_height="@dimen/bnt_details_height"
-                    android:layout_marginLeft="20dp"
-                    android:visibility="invisible"
-                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/dp_10"
                     android:background="@drawable/circle_line_666_20"
                     android:gravity="center"
                     android:text="解约"
                     android:textColor="@color/color_666666"
-                    android:textSize="@dimen/bnt_details_text_size" />
+                    android:textSize="@dimen/bnt_details_text_size"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/bnt_xy"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
+                    android:paddingHorizontal="15dp"
                     android:layout_height="@dimen/bnt_details_height"
-                    android:layout_marginHorizontal="30dp"
-                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/dp_10"
                     android:background="@drawable/circle_line_666_20"
                     android:gravity="center"
                     android:text="续约"
-                    android:visibility="invisible"
                     android:textColor="@color/color_666666"
-                    android:textSize="@dimen/bnt_details_text_size" />
+                    android:textSize="@dimen/bnt_details_text_size"
+                    android:visibility="gone" />
 
                 <TextView
                     android:id="@+id/bnt_zd"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
+                    android:paddingHorizontal="15dp"
                     android:layout_height="@dimen/bnt_details_height"
-                    android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/dp_10"
                     android:background="@drawable/circle_solid_theme_25"
                     android:gravity="center"
                     android:text="账单"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/bnt_details_text_size" />
+
+                <TextView
+                    android:id="@+id/bnt_dzht"
+                    android:layout_width="wrap_content"
+                    android:paddingHorizontal="15dp"
+                    android:layout_height="@dimen/bnt_details_height"
+                    android:layout_marginEnd="15dp"
+                    android:visibility="gone"
+                    android:background="@drawable/circle_solid_theme_25"
+                    android:gravity="center"
+                    android:text="电子合同"
                     android:textColor="@color/white"
                     android:textSize="@dimen/bnt_details_text_size" />
 
